[1] Change the input type of Classifier.predict_proba to rely on an array of Sample instances

--- a/Stage 1.ipynb
+++ b/Stage 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,23 +62,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-03-10 23:51:16,659 - parser - INFO - Column names are TeamID, TeamName, FirstD1Season, LastD1Season\n",
-      "2022-03-10 23:51:16,661 - parser - INFO - Processed 372 teams.\n",
-      "2022-03-10 23:51:16,662 - parser - INFO - Column names are Season, DayNum, WTeamID, WScore, LTeamID, LScore, WLoc, NumOT\n",
-      "2022-03-10 23:51:17,168 - parser - INFO - Processed 174471 games.\n",
-      "2022-03-10 23:51:17,169 - parser - INFO - Column names are Season, DayNum, WTeamID, WScore, LTeamID, LScore, WLoc, NumOT\n",
-      "2022-03-10 23:51:17,177 - parser - INFO - Processed 2317 games.\n",
-      "2022-03-10 23:51:17,178 - parser - INFO - Column names are Season, Seed, TeamID\n",
-      "2022-03-10 23:51:17,183 - parser - INFO - Processed 2354 seeds.\n",
-      "2022-03-10 23:51:17,185 - parser - INFO - Column names are Season, DayZero, RegionW, RegionX, RegionY, RegionZ\n",
-      "2022-03-10 23:51:17,407 - parser - INFO - Processed 38 seasons.\n"
+      "2022-03-12 19:26:35,782 - parser - INFO - Column names are TeamID, TeamName, FirstD1Season, LastD1Season\n",
+      "2022-03-12 19:26:35,783 - parser - INFO - Processed 372 teams.\n",
+      "2022-03-12 19:26:35,784 - parser - INFO - Column names are Season, DayNum, WTeamID, WScore, LTeamID, LScore, WLoc, NumOT\n",
+      "2022-03-12 19:26:36,368 - parser - INFO - Processed 174471 games.\n",
+      "2022-03-12 19:26:36,369 - parser - INFO - Column names are Season, DayNum, WTeamID, WScore, LTeamID, LScore, WLoc, NumOT\n",
+      "2022-03-12 19:26:36,376 - parser - INFO - Processed 2317 games.\n",
+      "2022-03-12 19:26:36,377 - parser - INFO - Column names are Season, Seed, TeamID\n",
+      "2022-03-12 19:26:36,382 - parser - INFO - Processed 2354 seeds.\n",
+      "2022-03-12 19:26:36,382 - parser - INFO - Column names are Season, DayZero, RegionW, RegionX, RegionY, RegionZ\n",
+      "2022-03-12 19:26:36,602 - parser - INFO - Processed 38 seasons.\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,27 +115,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "span_predictions = test_span.predict()\n",
+    "scores = Span.score(span_predictions)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{2016: 0.5946315325716526,\n",
-       " 2017: 0.5095242632948317,\n",
-       " 2018: 0.6273571250616217,\n",
-       " 2019: 0.5318068046860175,\n",
-       " -1: 0.5658299314035309}"
+       "{2016: 0.6931471805599453,\n",
+       " 2017: 0.6931471805599453,\n",
+       " 2018: 0.6931471805599453,\n",
+       " 2019: 0.6931471805599453,\n",
+       " -1: 0.6931471805599453}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3966\n",
+      "6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{2016: 0.576553828697187,\n",
+       " 2017: 0.529424883383249,\n",
+       " 2018: 0.6165002367520596,\n",
+       " 2019: 0.5058449209985503,\n",
+       " -1: 0.5570809674577615}"
+      ]
+     },
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
