Add two classes of features, one absolute, the other relative

--- a/Stage 1.ipynb
+++ b/Stage 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,23 +62,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-03-12 20:53:11,520 - parser - INFO - Column names are TeamID, TeamName, FirstD1Season, LastD1Season\n",
-      "2022-03-12 20:53:11,522 - parser - INFO - Processed 372 teams.\n",
-      "2022-03-12 20:53:11,523 - parser - INFO - Column names are Season, DayNum, WTeamID, WScore, LTeamID, LScore, WLoc, NumOT\n",
-      "2022-03-12 20:53:12,147 - parser - INFO - Processed 174471 games.\n",
-      "2022-03-12 20:53:12,149 - parser - INFO - Column names are Season, DayNum, WTeamID, WScore, LTeamID, LScore, WLoc, NumOT\n",
-      "2022-03-12 20:53:12,157 - parser - INFO - Processed 2317 games.\n",
-      "2022-03-12 20:53:12,158 - parser - INFO - Column names are Season, Seed, TeamID\n",
-      "2022-03-12 20:53:12,163 - parser - INFO - Processed 2354 seeds.\n",
-      "2022-03-12 20:53:12,165 - parser - INFO - Column names are Season, DayZero, RegionW, RegionX, RegionY, RegionZ\n",
-      "2022-03-12 20:53:12,410 - parser - INFO - Processed 38 seasons.\n"
+      "2022-03-12 20:53:40,476 - parser - INFO - Column names are TeamID, TeamName, FirstD1Season, LastD1Season\n",
+      "2022-03-12 20:53:40,478 - parser - INFO - Processed 372 teams.\n",
+      "2022-03-12 20:53:40,480 - parser - INFO - Column names are Season, DayNum, WTeamID, WScore, LTeamID, LScore, WLoc, NumOT\n",
+      "2022-03-12 20:53:41,009 - parser - INFO - Processed 174471 games.\n",
+      "2022-03-12 20:53:41,011 - parser - INFO - Column names are Season, DayNum, WTeamID, WScore, LTeamID, LScore, WLoc, NumOT\n",
+      "2022-03-12 20:53:41,017 - parser - INFO - Processed 2317 games.\n",
+      "2022-03-12 20:53:41,019 - parser - INFO - Column names are Season, Seed, TeamID\n",
+      "2022-03-12 20:53:41,024 - parser - INFO - Processed 2354 seeds.\n",
+      "2022-03-12 20:53:41,025 - parser - INFO - Column names are Season, DayZero, RegionW, RegionX, RegionY, RegionZ\n",
+      "2022-03-12 20:53:41,261 - parser - INFO - Processed 38 seasons.\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        " 'Average': 0.6931471805599453}"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,9 +149,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 239,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2016: 0.6022413543146412,\n",
+       " 2017: 0.500951629539511,\n",
+       " 2018: 0.6365543991339767,\n",
+       " 2019: 0.5268369428469317,\n",
+       " 'Average': 0.5666460814587652}"
+      ]
+     },
+     "execution_count": 239,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_scores(max_iter):\n",
     "    classifier = train_span.train(max_iter)\n",
@@ -165,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +190,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-219-10c25d60ad4e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m100000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_average_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-238-10c25d60ad4e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m100000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_average_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'get_average_score' is not defined"
      ]
     }
