Simplify access to feature data

--- a/Stage 1.ipynb
+++ b/Stage 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,23 +62,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-03-13 11:03:07,550 - parser - INFO - Column names are TeamID, TeamName, FirstD1Season, LastD1Season\n",
-      "2022-03-13 11:03:07,551 - parser - INFO - Processed 372 teams.\n",
-      "2022-03-13 11:03:07,552 - parser - INFO - Column names are Season, DayNum, WTeamID, WScore, LTeamID, LScore, WLoc, NumOT\n",
-      "2022-03-13 11:03:08,155 - parser - INFO - Processed 174471 games.\n",
-      "2022-03-13 11:03:08,156 - parser - INFO - Column names are Season, DayNum, WTeamID, WScore, LTeamID, LScore, WLoc, NumOT\n",
-      "2022-03-13 11:03:08,163 - parser - INFO - Processed 2317 games.\n",
-      "2022-03-13 11:03:08,164 - parser - INFO - Column names are Season, Seed, TeamID\n",
-      "2022-03-13 11:03:08,169 - parser - INFO - Processed 2354 seeds.\n",
-      "2022-03-13 11:03:08,170 - parser - INFO - Column names are Season, DayZero, RegionW, RegionX, RegionY, RegionZ\n",
-      "2022-03-13 11:03:08,399 - parser - INFO - Processed 38 seasons.\n"
+      "2022-03-13 11:47:48,344 - parser - INFO - Column names are TeamID, TeamName, FirstD1Season, LastD1Season\n",
+      "2022-03-13 11:47:48,346 - parser - INFO - Processed 372 teams.\n",
+      "2022-03-13 11:47:48,347 - parser - INFO - Column names are Season, DayNum, WTeamID, WScore, LTeamID, LScore, WLoc, NumOT\n",
+      "2022-03-13 11:47:48,866 - parser - INFO - Processed 174471 games.\n",
+      "2022-03-13 11:47:48,867 - parser - INFO - Column names are Season, DayNum, WTeamID, WScore, LTeamID, LScore, WLoc, NumOT\n",
+      "2022-03-13 11:47:48,873 - parser - INFO - Processed 2317 games.\n",
+      "2022-03-13 11:47:48,875 - parser - INFO - Column names are Season, Seed, TeamID\n",
+      "2022-03-13 11:47:48,879 - parser - INFO - Processed 2354 seeds.\n",
+      "2022-03-13 11:47:48,880 - parser - INFO - Column names are Season, DayZero, RegionW, RegionX, RegionY, RegionZ\n",
+      "2022-03-13 11:47:49,103 - parser - INFO - Processed 38 seasons.\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,9 +115,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 321,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Tournament' object has no attribute 'tournament'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-321-41a0bdddcca9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mspan_predictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest_span\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mscores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSpan\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspan_predictions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/PycharmProjects/madness/span.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, classifiers)\u001b[0m\n\u001b[1;32m     75\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mseason\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseasons\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m             \u001b[0mseason_classifier\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclassifiers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseason\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myear\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFiftyFiftyClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 77\u001b[0;31m             \u001b[0mseason_predictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mseason\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseason_classifier\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     78\u001b[0m             \u001b[0mspan_predictions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mseason\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myear\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mseason_predictions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/PycharmProjects/madness/season.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, classifier)\u001b[0m\n\u001b[1;32m    128\u001b[0m             \u001b[0;31m# No need to enumerate for second team, we only use that team's ID.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    129\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mteam_2_id\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtournament_teams_ids\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx_1\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 130\u001b[0;31m                 \u001b[0msamples\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_sample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteam_1_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mteam_2_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    131\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    132\u001b[0m         \u001b[0mclasses_probabilities\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclassifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict_proba\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msamples\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/PycharmProjects/madness/season.py\u001b[0m in \u001b[0;36mget_sample\u001b[0;34m(self, team_1_id, team_2_id)\u001b[0m\n\u001b[1;32m    142\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget_sample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mteam_1_id\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mteam_2_id\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    143\u001b[0m         \u001b[0mexpected_outcome\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtournament\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_expected_outcome\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteam_1_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mteam_2_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 144\u001b[0;31m         \u001b[0mmatch_up_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_match_up_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMatchUp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteam_1_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mteam_2_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    145\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    146\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mSample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteam_1_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mteam_2_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmatch_up_features\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpected_outcome\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/PycharmProjects/madness/season.py\u001b[0m in \u001b[0;36mget_match_up_features\u001b[0;34m(self, match_up)\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget_match_up_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmatch_up\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mMatchUp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m         \u001b[0mfeatures\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mFeature\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuild_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmatch_up\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m         \u001b[0mvision_1_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/PycharmProjects/madness/season.py\u001b[0m in \u001b[0;36mbuild_features\u001b[0;34m(self, match_up)\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mbuild_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmatch_up\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mMatchUp\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mFeature\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 67\u001b[0;31m         \u001b[0mabsolute_features\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mFeature\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuild_absolute_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmatch_up\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     68\u001b[0m         \u001b[0mrelative_features\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mFeature\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuild_relative_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmatch_up\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mabsolute_features\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mrelative_features\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/PycharmProjects/madness/season.py\u001b[0m in \u001b[0;36mbuild_absolute_features\u001b[0;34m(self, match_up)\u001b[0m\n\u001b[1;32m     82\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mbuild_absolute_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmatch_up\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mMatchUp\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mAbsoluteFeature\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m         \u001b[0mteam_id_feature\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmatch_up\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_teams_ids_feature\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 84\u001b[0;31m         \u001b[0mseed_position_feature\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtournament\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_seeds_positions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmatch_up\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     85\u001b[0m         \u001b[0maverage_points_allowed_feature\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mregular_season\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_average_points_allowed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmatch_up\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m         \u001b[0maverage_points_scored_feature\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mregular_season\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_average_points_scored\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmatch_up\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/PycharmProjects/madness/tournament.py\u001b[0m in \u001b[0;36mget_seeds_positions\u001b[0;34m(self, match_up)\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget_seeds_positions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmatch_up\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mMatchUp\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mFeature\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m         return AbsoluteFeature(self.tournament.seeds[match_up.team_1_id].position,\n\u001b[0m\u001b[1;32m     29\u001b[0m                                self.tournament.seeds[match_up.team_2_id].position)\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Tournament' object has no attribute 'tournament'"
+     ]
+    }
+   ],
    "source": [
     "span_predictions = test_span.predict()\n",
     "scores = Span.score(span_predictions)"
@@ -125,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +157,7 @@
        " 'Average': 0.6931471805599453}"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 313,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,20 +168,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{2016: 0.6079323637995695,\n",
-       " 2017: 0.5360864257626665,\n",
-       " 2018: 0.6071683487453226,\n",
-       " 2019: 0.5244434746927724,\n",
-       " 'Average': 0.5689076532500827}"
+       "{2016: 0.5661946065837112,\n",
+       " 2017: 0.5363595561086407,\n",
+       " 2018: 0.6162056151202538,\n",
+       " 2019: 0.500544058493409,\n",
+       " 'Average': 0.5548259590765037}"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     }
