Ingest 2003+ data with teams stats

--- a/Stage 1.ipynb
+++ b/Stage 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,25 +51,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-03-14 10:34:52,073 - parser - INFO - Column names are TeamID, TeamName, FirstD1Season, LastD1Season\n",
-      "2022-03-14 10:34:52,075 - parser - INFO - Processed 372 teams.\n",
-      "2022-03-14 10:34:52,077 - parser - INFO - Column names are Season, DayNum, WTeamID, WScore, LTeamID, LScore, WLoc, NumOT\n",
-      "2022-03-14 10:34:52,642 - parser - INFO - Processed 174471 games.\n",
-      "2022-03-14 10:34:52,643 - parser - INFO - Column names are Season, DayNum, WTeamID, WScore, LTeamID, LScore, WLoc, NumOT\n",
-      "2022-03-14 10:34:52,650 - parser - INFO - Processed 2317 games.\n",
-      "2022-03-14 10:34:52,651 - parser - INFO - Column names are Season, Seed, TeamID\n",
-      "2022-03-14 10:34:52,656 - parser - INFO - Processed 2354 seeds.\n",
-      "2022-03-14 10:34:52,657 - parser - INFO - Column names are Season, RankingDayNum, SystemName, TeamID, OrdinalRank\n",
-      "2022-03-14 10:34:57,635 - parser - INFO - Processed 4521720 ranking rows.\n",
-      "2022-03-14 10:34:57,636 - parser - INFO - Column names are Season, DayZero, RegionW, RegionX, RegionY, RegionZ\n",
-      "2022-03-14 10:34:57,838 - parser - INFO - Processed 38 seasons.\n"
+      "2022-03-14 10:58:44,311 - parser - INFO - Column names are TeamID, TeamName, FirstD1Season, LastD1Season\n",
+      "2022-03-14 10:58:44,312 - parser - INFO - Processed 372 teams.\n",
+      "2022-03-14 10:58:44,313 - parser - INFO - Column names are Season, DayNum, WTeamID, WScore, LTeamID, LScore, WLoc, NumOT, WFGM, WFGA, WFGM3, WFGA3, WFTM, WFTA, WOR, WDR, WAst, WTO, WStl, WBlk, WPF, LFGM, LFGA, LFGM3, LFGA3, LFTM, LFTA, LOR, LDR, LAst, LTO, LStl, LBlk, LPF\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() missing 26 required positional arguments: 'w_fgm', 'w_fga', 'w_fgm3', 'w_fga3', 'w_ftm', 'w_fta', 'w_or', 'w_dr', 'w_ast', 'w_to', 'w_stl', 'w_blk', 'w_pf', 'l_fgm', 'l_fga', 'l_fgm3', 'l_fga3', 'l_ftm', 'l_fta', 'l_or', 'l_dr', 'l_ast', 'l_to', 'l_stl', 'l_blk', and 'l_pf'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-205-04495eea4348>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mParser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mseasons\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mteams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mtrain_seasons\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/PycharmProjects/madness/parser.py\u001b[0m in \u001b[0;36mparse\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0mteams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse_teams\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m         \u001b[0mregular_seasons_games\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse_regular_seasons_games\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m         \u001b[0mtournaments_games\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse_tournaments_games\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m         \u001b[0mseasons_seeds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse_seeds\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/PycharmProjects/madness/parser.py\u001b[0m in \u001b[0;36mparse_regular_seasons_games\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    157\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0myear\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mgames\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    158\u001b[0m                         \u001b[0mgames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0myear\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 159\u001b[0;31m                     \u001b[0mgames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0myear\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myear\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mday_num\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw_team_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ml_team_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ml_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw_loc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_ot\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    160\u001b[0m                 \u001b[0mline_count\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    161\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Processed {line_count - 1} games.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 26 required positional arguments: 'w_fgm', 'w_fga', 'w_fgm3', 'w_fga3', 'w_ftm', 'w_fta', 'w_or', 'w_dr', 'w_ast', 'w_to', 'w_stl', 'w_blk', 'w_pf', 'l_fgm', 'l_fga', 'l_fgm3', 'l_fga3', 'l_ftm', 'l_fta', 'l_or', 'l_dr', 'l_ast', 'l_to', 'l_stl', 'l_blk', and 'l_pf'"
      ]
     }
    ],
@@ -94,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,21 +111,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{2016: 0.5741845178334207,\n",
-       " 2017: 0.5338871073836504,\n",
-       " 2018: 0.5910769563810346,\n",
-       " 2019: 0.5140866461107633,\n",
-       " 2021: 0.6559797470299419,\n",
-       " 'Average': 0.5738429949477621}"
+       "{2016: 0.5974520960445685,\n",
+       " 2017: 0.5562818721653595,\n",
+       " 2018: 0.588477156754918,\n",
+       " 2019: 0.5391616166470549,\n",
+       " 2021: 0.6488200526980702,\n",
+       " 'Average': 0.5860385588619942}"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,14 +144,14 @@
     "def get_average_score(max_iter):\n",
     "    return get_scores(max_iter)['Average']\n",
     "\n",
-    "span_predictions = get_span_predictions(50000)\n",
+    "span_predictions = get_span_predictions(100000)\n",
     "\n",
     "get_scores(span_predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
