--- a/Stage 1.ipynb
+++ b/Stage 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 334,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 335,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -36,11 +36,11 @@
     "\n",
     "# Logging strategy for this notebook.\n",
     "root = logging.getLogger()\n",
-    "root.setLevel(logging.WARN)\n",
+    "root.setLevel(logging.INFO)\n",
     "\n",
     "if not root.hasHandlers():\n",
     "    handler = logging.StreamHandler(sys.stdout)\n",
-    "    handler.setLevel(logging.WARN)\n",
+    "    handler.setLevel(logging.INFO)\n",
     "\n",
     "    formatter = logging.Formatter('%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
     "    handler.setFormatter(formatter)\n",
@@ -50,24 +50,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
+   "execution_count": 373,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-03-17 10:12:36,985 - parser - INFO - Column names are TeamID, TeamName, FirstD1Season, LastD1Season\n",
+      "2022-03-17 10:12:36,986 - parser - INFO - Processed 372 teams.\n",
+      "2022-03-17 10:12:36,987 - parser - INFO - Column names are Season, DayNum, WTeamID, WScore, LTeamID, LScore, WLoc, NumOT\n",
+      "2022-03-17 10:12:37,788 - parser - INFO - Processed 176080 games.\n",
+      "2022-03-17 10:12:37,789 - parser - INFO - Column names are Season, DayNum, WTeamID, WScore, LTeamID, LScore, WLoc, NumOT\n",
+      "2022-03-17 10:12:37,798 - parser - INFO - Processed 2317 games.\n",
+      "2022-03-17 10:12:37,800 - parser - INFO - Column names are Season, Seed, TeamID\n",
+      "2022-03-17 10:12:37,805 - parser - INFO - Processed 2422 seeds.\n",
+      "2022-03-17 10:12:37,806 - parser - INFO - Column names are Season, RankingDayNum, SystemName, TeamID, OrdinalRank\n",
+      "2022-03-17 10:12:42,898 - parser - INFO - Processed 4603637 ranking rows.\n",
+      "2022-03-17 10:12:42,899 - parser - INFO - Column names are Season, DayZero, RegionW, RegionX, RegionY, RegionZ\n",
+      "2022-03-17 10:12:43,120 - parser - INFO - Processed 38 seasons.\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "from parser import Parser\n",
     "from span import Span\n",
     "\n",
-    "parser = Parser()\n",
+    "parser = Parser(\"M\")\n",
     "seasons, teams = parser.parse()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 337,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -77,7 +92,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08f68e88184a456d88994b0cefe62533",
+       "model_id": "77ee616243504ea789c995a1df1f6a7f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -91,7 +106,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd6f1ab9276c4611a271b71b9b8c2dfb",
+       "model_id": "096e1b3daf374dc6937e27d9fd88bcdc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -105,7 +120,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dbdb9eeaf9e2487c91714fb8bf0047a8",
+       "model_id": "976003d42d91492180bebf89f76b4c1b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -119,7 +134,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d11d136716f454eb0de53326d0c02b2",
+       "model_id": "e8add55240a7446cad1f91cbbf4ccfe0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -133,7 +148,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1e10bea23bc4f34b041f9d14672853c",
+       "model_id": "d6e310efc7464dacb12b5eefd42302eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -175,12 +190,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 374,
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_span, test_span = Span.create_spans(seasons, \n",
@@ -197,24 +208,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys([2022])"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 375,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def get_span_predictions(max_iter):\n",
     "    classifier = train_span.train(max_iter)\n",
@@ -229,20 +225,83 @@
     "def get_average_score(max_iter):\n",
     "    return get_scores(get_span_predictions(max_iter))['Average']\n",
     "\n",
-    "span_predictions = get_span_predictions(10000)\n",
+    "span_predictions = get_span_predictions(50000)\n",
     "\n",
-    "span_predictions.keys()\n",
+    "\n",
     "# get_scores(span_predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<season.Season object at 0x7fb679ba0a30>\n",
+      "<season.Season object at 0x7fb679ba0b80>\n",
+      "<season.Season object at 0x7fb679ba0cd0>\n",
+      "<season.Season object at 0x7fb679ba0e20>\n",
+      "<season.Season object at 0x7fb679ba0f70>\n",
+      "<season.Season object at 0x7fb679be5100>\n",
+      "<season.Season object at 0x7fb679be5250>\n",
+      "<season.Season object at 0x7fb679be53a0>\n",
+      "<season.Season object at 0x7fb679be54f0>\n",
+      "<season.Season object at 0x7fb679be5640>\n",
+      "<season.Season object at 0x7fb679be5790>\n",
+      "<season.Season object at 0x7fb679be58e0>\n",
+      "<season.Season object at 0x7fb679be5a30>\n",
+      "<season.Season object at 0x7fb679be5bb0>\n",
+      "<season.Season object at 0x7fb679be5d90>\n",
+      "<season.Season object at 0x7fb679be5f70>\n",
+      "<season.Season object at 0x7fb6bc150190>\n",
+      "[]\n",
+      "Error\n",
+      "set()\n"
+     ]
     }
-   },
+   ],
+   "source": [
+    "systems = set(seasons[2003].tournament.rankings.keys())\n",
+    "\n",
+    "for i in range(2003, 2022):\n",
+    "    s = seasons[i]\n",
+    "    print(s)\n",
+    "    if not s or s.tournament.year == 2020:\n",
+    "        print (\"Error\")\n",
+    "        continue\n",
+    "    else:\n",
+    "        systems = systems & s.tournament.rankings.keys()\n",
+    "\n",
+    "print(systems)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 296,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['7OT', 'ACU', 'AP', 'ARG', 'BBT', 'BIH', 'BLS', 'BOB', 'BOW', 'BUR', 'BWE', 'CNG', 'COL', 'CPA', 'CPR', 'CRO', 'D1A', 'DAV', 'DC', 'DCI', 'DES', 'DII', 'DOK', 'DOL', 'EBP', 'FAS', 'FSH', 'HAS', 'KPI', 'KPK', 'KRA', 'LMC', 'LOG', 'MAS', 'MCL', 'MOR', 'MSX', 'NOL', 'PGH', 'PIG', 'POM', 'REW', 'RPI', 'RT', 'RTH', 'RTP', 'RTR', 'SAG', 'SEL', 'SFX', 'SP', 'SPR', 'SPW', 'STH', 'TPR', 'TRK', 'TRP', 'TW', 'USA', 'WIL', 'WLK', 'WOB', 'WOL'])"
+      ]
+     },
+     "execution_count": 296,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seasons[2016].tournament.rankings.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 372,
+   "metadata": {},
    "outputs": [],
    "source": [
     "lines = [\"ID,Pred\"]\n",
@@ -252,98 +311,167 @@
     "        for prediction in span_predictions[year]:\n",
     "            lines.append(f\"{year}_{prediction.team_1_id}_{prediction.team_2_id},{prediction.win_p}\")\n",
     "            \n",
-    "with open('submission.csv', 'w') as f:\n",
+    "with open('submission_final_2_w.csv', 'w') as f:\n",
     "    for line in lines:\n",
     "        f.write(line)\n",
-    "        f.write('\\n')"
+    "        f.write('\\n')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'tournament'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-270-02a0d8b38bb3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mseasons\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m2020\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0msystems\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msystems\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtournament\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrankings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msystems\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'tournament'"
+     ]
     }
-   },
-   "outputs": [],
-   "source": [
-    "seeds = seasons[2022].tournament.seeds"
-   ]
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 183,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_seeds_for_region(region):\n",
-    "    return [seed for seed in seeds.values() if seed.region == region]"
+    "    # Removing Appalachian St, \n",
+    "    s = [seed for seed in seeds.values() if seed.region == region and seed.team_id != 1461]\n",
+    "    s.sort(key=lambda x: x.position)\n",
+    "    return s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
     "seeds_w = get_seeds_for_region(\"W\")\n",
     "seeds_x = get_seeds_for_region(\"X\")\n",
     "seeds_y = get_seeds_for_region(\"Y\")\n",
-    "seeds_z = get_seeds_for_region(\"Z\")"
+    "seeds_z = get_seeds_for_region(\"Z\")\n",
+    "\n",
+    "def get_match_up_id(team_1_id, team_2_id):\n",
+    "    s, t = team_1_id, team_2_id\n",
+    "    if s > t:\n",
+    "        s, t = t, s\n",
+    "    return f\"{s}_{t}\"\n",
+    "\n",
+    "def get_match_up_name(team_1_id, team_2_id):\n",
+    "    s, t = team_1_id, team_2_id\n",
+    "    if s > t:\n",
+    "        s, t = t, s\n",
+    "    return f\"{name(s)} vs. {name(t)}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 209,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baylor vs. Norfolk St --> Baylor\n",
+      "Kentucky vs. St Peter's --> Kentucky\n",
+      "Purdue vs. Yale --> Purdue\n",
+      "Akron vs. UCLA --> UCLA\n",
+      "Indiana vs. St Mary's CA --> St Mary's CA\n",
+      "Texas vs. Virginia Tech --> Texas\n",
+      "Murray St vs. San Francisco --> Murray St\n",
+      "Marquette vs. North Carolina --> North Carolina\n"
+     ]
+    }
+   ],
    "source": [
-    "seeds_w.sort(key=lambda x: x.position)\n"
+    "def name(team_id):\n",
+    "    return seasons[2022].teams[team_id].name\n",
+    "\n",
+    "predictions = span_predictions[2022]\n",
+    "d = {}\n",
+    "for p in predictions:\n",
+    "    d[f\"{p.team_1_id}_{p.team_2_id}\"] = p.win_p\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "seeds = seeds_w\n",
+    "n = 15\n",
+    "for i in range(8):\n",
+    "    team_id_i = seeds[i].team_id\n",
+    "    team_id_n_i = seeds[n-i].team_id\n",
+    "    match_up_id = get_match_up_id(team_id_i, team_id_n_i)\n",
+    "    \n",
+    "    winner = name(team_id_i)\n",
+    "    if random.uniform(0, 1) > d[match_up_id]:\n",
+    "        winner = name(team_id_n_i)\n",
+    "    print(f\"{get_match_up_name(team_id_i, team_id_n_i)} --> {winner}\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1461\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, t in seasons[2022].teams.items():\n",
+    "    if 'Wyoming' in t.name:\n",
+    "        print (t.id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "17"
+       "[(1124, 'Baylor'),\n",
+       " (1246, 'Kentucky'),\n",
+       " (1345, 'Purdue'),\n",
+       " (1417, 'UCLA'),\n",
+       " (1388, \"St Mary's CA\"),\n",
+       " (1400, 'Texas'),\n",
+       " (1293, 'Murray St'),\n",
+       " (1314, 'North Carolina'),\n",
+       " (1266, 'Marquette'),\n",
+       " (1362, 'San Francisco'),\n",
+       " (1439, 'Virginia Tech'),\n",
+       " (1231, 'Indiana'),\n",
+       " (1461, 'Wyoming'),\n",
+       " (1103, 'Akron'),\n",
+       " (1463, 'Yale'),\n",
+       " (1389, \"St Peter's\"),\n",
+       " (1313, 'Norfolk St')]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(teams_x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "17"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(teams_y)"
+    "[(s.team_id, name(s.team_id)) for s in seeds_w]"
    ]
   },
   {
